GameState, PlayerState, GameMode and some comments

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,9 +2,9 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/DodgeTheRock/Maps/MainMenuLevel.MainMenuLevel
-GameInstanceClass=/Game/DodgeTheRock/Core/GameInstances/BP_DodgeTheRockGameInstance.BP_DodgeTheRockGameInstance_C
-GlobalDefaultGameMode=/Game/DodgeTheRock/Core/GameModes/BP_MainMenuGameMode.BP_MainMenuGameMode_C
-EditorStartupMap=/Game/DodgeTheRock/Maps/DodgeLevel.DodgeLevel
+GameInstanceClass=/Game/DodgeTheRock/Core/GameInstances/BP_DodgeGameInstance.BP_DodgeGameInstance_C
+GlobalDefaultGameMode=/Game/DodgeTheRock/Core/GameModes/BP_DodgeGameMode.BP_DodgeGameMode_C
+EditorStartupMap=/Game/DodgeTheRock/Maps/MainMenuLevel.MainMenuLevel
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
